--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
-/node_modules
+node_modules
 /dist
+
 
 # local env files
 .env.local
@@ -10,6 +11,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -20,5 +22,5 @@ yarn-error.log*
 *.sln
 *.sw?
 
-# Electron-builder output
-/output
+#Electron-builder output
+/dist_electron
