--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "Flamechat",
-  "version": "0.0.1",
+  "name": "flamechat-client",
+  "version": "0.1.0",
   "private": true,
-  "description": "A lightweight chatting app built for the modern web.",
-  "author": "Paradigm Development, Inc.",
-  "repository": "github:Paradigm-Dev/flamechat-client",
   "scripts": {
-    "release": "vue-cli-service electron:build --publish always --win",
     "build": "vue-cli-service electron:build",
     "serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
@@ -14,22 +10,25 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@mdi/font": "^3.8.95",
-    "core-js": "^2.6.11",
-    "electron-updater": "^4.2.5",
-    "file-saver": "^2.0.2",
-    "firebase": "^7.14.0",
-    "moment": "^2.24.0",
-    "print-js": "^1.0.63",
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",
+    "electron-updater": "^4.3.5",
+    "moment": "^2.29.1",
+    "socket.io-client": "^2.3.1",
     "vue": "^2.6.11",
     "vue-chat-scroll": "^1.4.0",
-    "vuetify": "^2.2.21"
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-service": "^4.3.1",
-    "electron": "^5.0.13",
-    "vue-cli-plugin-electron-builder": "^1.4.6",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "electron": "^9.0.0",
+    "electron-devtools-installer": "^3.1.0",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
+    "vue-cli-plugin-vuetify": "~2.0.9",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
