--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "flamechat-client",
-  "version": "0.1.0",
+  "name": "wire-client",
+  "version": "1.0.0",
   "private": true,
+  "description": "A secure and freedom-oriented chatting app.",
+  "author": {
+    "name": "Paradigm",
+    "email": "paradigmdevelop@gmail.com"
+  },
+  "homepage": "https://www.theparadigmdev.com",
+  "repository": "github:Paradigm-Dev/wire-client",
   "scripts": {
     "build": "vue-cli-service electron:build",
     "serve": "vue-cli-service electron:serve",
+    "release": "vue-cli-service electron:build --publish always -mw",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
