--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron-updater": "^4.3.5",
     "moment": "^2.29.1",
     "socket.io-client": "^2.3.1",
+    "v8-compile-cache": "^2.2.0",
     "vue": "^2.6.11",
     "vue-chat-scroll": "^1.4.0",
     "vuetify": "^2.2.11"
